pass in token parameter

--- a/templates/index_with_token.html
+++ b/templates/index_with_token.html
@@ -3,4 +3,7 @@
       <p>
       SingleTask is a simple web app that helps you see and complete one task at a time
       </p>
+      <p>
+      {{token}}
+      </p>
 {% endblock %}
