--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
+      <h1 class="title">{{ title }}</h1>
       <p>
       SingleTask is a simple web app that helps you see and complete one task at a time
       </p>
       <div class="section">
         <div class="container">
           <div class="columns is-mobile is-centered">
-            <div class="column is-full-mobile is-half-tablet is-one-third-desktop">
+            <div class="column is-full-mobile is-half-tablet is-half-desktop">
               <div class="box">
       
                 <form action="/" method="GET">
