--- a/templates/index_with_no_task.html
+++ b/templates/index_with_no_task.html
@@ -6,7 +6,7 @@
       <div class="section">
         <div class="container">
           <div class="columns is-mobile is-centered">
-            <div class="column is-full-mobile is-half-tablet is-one-third-desktop">
+            <div class="column is-full-mobile is-half-tablet is-half-desktop">
               <div class="box">
                 No tasks to complete with filter: {{filter}}      
               </div>
