--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>{{ title }} | SingleTask</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
       <style>
       @media (min-width: 768px) {
         .is-half {
@@ -35,7 +36,6 @@
     {% include "nav.html" %}
     <section class="section">
       <div class="container">
-        <h1 class="title">{{ title }}</h1>
         <div class="content">
         {% block content %} DEFAULT CONTENT {% endblock %}
         </div>
