make complete full width on mobile

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,11 @@
       .svg {
         fill: white;
       }
+      @media (max-width: 768px) {
+            .full-width-mobile {
+                width: 100%;
+            }
+        }
       </style>
       <script>
       $(".navbar-burger").click(function() {
