--- a/templates/index_with_task.html
+++ b/templates/index_with_task.html
@@ -27,7 +27,7 @@
                   <input type="text" id="timezone" name="timezone" value="{{timezone}}" hidden>
                   <input type="text" id="task_id" name="task_id" value="{{task.id}}" hidden>
 <div class="has-text-right">
-                  <input type="submit" value="Complete" class="button is-primary">
+                  <input type="submit" value="Complete" class="button is-primary full-width-mobile">
 </div>
                 </form>
               </div>
