--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>{{ title }} | SingleTask</title>
+      <title>{{title}} | SingleTask</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
       <style>
@@ -42,7 +42,13 @@
     <section class="section">
       <div class="container">
         <div class="content">
-        {% block content %} DEFAULT CONTENT {% endblock %}
+          <div class="columns is-mobile is-centered">
+            <div class="column is-full-mobile is-half-tablet is-half-desktop">
+              <div class="box">
+                {% block content %} DEFAULT CONTENT {% endblock %}
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
