--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 {% block content %}
       <h1 class="title">{{ title }}</h1>
       <p>
-      SingleTask is a simple web app that helps you see and complete one task at a time
+        Maintain your focus while completing Todoist tasks one at a time.
       </p>
      
       <form action="/" method="GET">
