--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
         </div>
               <div class="field">
                 <label for="timezone" class="label">Timezone:</label>
-                <input type="text" id="timezone" name="timezone" value="America/Los Angeles" class="input" required>
+                <input type="text" id="timezone" name="timezone" value="America/Los_Angeles" class="input" required>
         </div>
 
         <input type="submit" value="Submit" class="button">
