--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         Maintain your focus while completing Todoist tasks one at a time.
       </p>
      
-      <form action="/" method="GET">
+      <form action="/process" method="GET">
         <div class="field">
                 <label for="token" class="label">API Token:</label>
                 <input type="text" id="token" name="token" placeholder="Add Todoist API token" class="input" required>
