--- a/templates/index_with_no_task.html
+++ b/templates/index_with_no_task.html
@@ -9,7 +9,7 @@
 <p>
   Would you like to use another filter?
 </p>
-<form action="/" method="GET">
+<form action="/process" method="GET">
   <input type="text" id="token" name="token" value={{token}} hidden>
   <div class="field">
     <input type="text" id="filter" name="filter" value="{{filter}}" class="input" required>
