--- a/templates/index_with_task.html
+++ b/templates/index_with_task.html
@@ -19,7 +19,7 @@
 </p>
 <div class="columns">
 	<div class="column is-half">
-    <form action="/" method="GET">
+    <form action="/process" method="GET">
       <input type="text" id="token" name="token" value={{token}} hidden>
       <input type="text" id="filter" name="filter" value="{{filter}}" hidden>
       <input type="text" id="timezone" name="timezone" value="{{timezone}}" hidden>
@@ -30,7 +30,7 @@
     </form>
   </div>
 	<div class="column is-half">
-    <form action="/" method="GET">
+    <form action="/process" method="GET">
       <input type="text" id="token" name="token" value={{token}} hidden>
       <input type="text" id="filter" name="filter" value="{{filter}}" hidden>
       <input type="text" id="timezone" name="timezone" value="{{timezone}}" hidden>
