--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
     </head>
   <body>
     <div class="is-pulled-right bottom-right">
-      <a href="{{unsplash.links.html}}" class="button is-secondary" target="_blank">Background by {{unsplash.user.name}}</a>
+      <a href="{{unsplash.links.html}}" class="button is-small is-secondary" target="_blank">Background by {{unsplash.user.name}}</a>
     </div>
     <section class="background-image">
       {% include "nav.html" %}
