--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
                 width: 100%;
             }
         }
+      .has-text-white > p > a {
+        color: white !important;
+      }
       </style>
     </head>
   <body>
