--- a/templates/base.html
+++ b/templates/base.html
@@ -6,71 +6,8 @@
       <title>{{title}} | SingleTask</title>
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.1/css/bulma.min.css">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-      <style>
-
-       .background-image {
-          background-image: url('{{unsplash.urls.regular}}');
-          background-size: cover;
-          background-position: center;
-          background-repeat: no-repeat;
-          height: 100vh; /* Adjust the height as needed */
-        }
-        .bottom-right {
-            position: absolute;
-            bottom: 1.5rem;
-            right: 1.5rem;
-        }
-      @media (min-width: 768px) {
-        .is-half {
-          width: 50%;
-        }
-        .is-centered {
-          display: flex;
-          justify-content: center;
-        }
-      }
-      .svg {
-        fill: white;
-      }
-      @media (max-width: 768px) {
-            .full-width-mobile {
-                width: 100%;
-            }
-        }
-      .has-text-white > p > a {
-        color: white !important;
-      }
-      </style>
-      <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            // Select the form element
-            const completeform = document.getElementById('completeform');
-
-            // Add event listener for keydown events
-            document.addEventListener('keydown', (event) => {
-                // Check if the pressed key is 'c'
-                if (event.key === 'c' || event.key === 'C') {
-                    // Prevent the default behavior
-                    event.preventDefault();
-                    // Submit the form
-                    completeform.submit();
-                }
-            });
-            // Select the form element
-            const skipform = document.getElementById('skipform');
-
-            // Add event listener for keydown events
-            document.addEventListener('keydown', (event) => {
-                // Check if the pressed key is 'c'
-                if (event.key === 's' || event.key === 'S') {
-                    // Prevent the default behavior
-                    event.preventDefault();
-                    // Submit the form
-                    skipform.submit();
-                }
-            });
-        });
-    </script>
+      <script>{% include "base.js" %}</script>
+      <style>{% include "base.css" %}</style>
     </head>
   <body>
     <div class="is-pulled-right bottom-right">
